--- a/views/map.pug
+++ b/views/map.pug
@@ -1,102 +1,108 @@
 doctype html
 
 
-mixin sidebarLocationFactory(group, groupName)
-    ul= groupName
-        button(type="button"
-                id = `${groupName}`
-                onclick=`expandGroup(\'${groupName}\')`) EXP
-
-
-        each location in group || {}
-            li(locationId = `${location.id}`, title=`${location.locationTitle}`, groupName=`${groupName}`).locationItem= location.locationTitle
-                button(type="button"
-                    hx-post="/removeLocation"
-                    hx-target="#sidebar"
-                    hx-trigger="click"
-                    hx-swap="outerHTML"
-                    hx-vars=`{"locationId": "${location.id}", "title": "${location.locationTitle}", "groupName": "${groupName}"}`) DEL
+//mixin sidebarLocationFactory(group, groupName)
+//    ul= groupName
+//        button(type="button"
+//                id = `${groupName}`
+//                onclick=`expandGroup(\'${groupName}\')`) EXP
+//
+//
+//        each location in group || {}
+//            li(locationId = `${location.id}`, title=`${location.locationTitle}`, groupName=`${groupName}`).locationItem= location.locationTitle
+//                button(type="button"
+//                    hx-post="/removeLocation"
+//                    hx-target="#sidebar"
+//                    hx-trigger="click"
+//                    hx-swap="outerHTML"
+//                    hx-vars=`{"locationId": "${location.id}", "title": "${location.locationTitle}", "groupName": "${groupName}"}`) DEL
 
 html
     head
-        title TopraTek
+        title TopraTek.com
+        link(rel='stylesheet', href='./CSS/main.css')
+
         script(src='https://unpkg.com/htmx.org@1.9.10' integrity='sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC' crossorigin='anonymous')
 
     body
 
+        include navbar
+        include sidebar
 
-        button(type="button" onclick="groups()") G
-
-
-        form(hx-post="/addLocation" hx-trigger="submit" hx-target="#sidebar" hx-swap="outerHTML")
-            // Location Section
-            section
-                h3 Location
-                label(for="locationTitle") Location Title:
-                input(type="text", name="locationTitle", id="locationTitle", value="DummyLocationTitle" , required)
-
-                label(for="locationDescription") Location Description:
-                input(type="text", name="locationDescription", id="locationDescription", value="DummyLocationDescription" , required)
+        main.map-container
+            p gfhds
+            // Your map content goes here
 
 
-            input(type="checkbox" name="currentCropChoiceBtn" id="currentCropChoiceBtn")
-            label(for="currentCropChoiceBtn") Add Current Crop
-            br
+        //form(hx-post="/addLocation" hx-trigger="submit" hx-target="#sidebar" hx-swap="outerHTML")
+        //    // Location Section
+        //    section
+        //        h3 Location
+        //        label(for="locationTitle") Location Title:
+        //        input(type="text", name="locationTitle", id="locationTitle", value="DummyLocationTitle" , required)
+        //
+        //        label(for="locationDescription") Location Description:
+        //        input(type="text", name="locationDescription", id="locationDescription", value="DummyLocationDescription" , required)
+        //
+        //
+        //    input(type="checkbox" name="currentCropChoiceBtn" id="currentCropChoiceBtn")
+        //    label(for="currentCropChoiceBtn") Add Current Crop
+        //    br
+        //
+        //    // Crop Section
+        //    section#currentCrop(style="display: none;")
+        //
+        //        h3 Current Crop
+        //        label(for="cropName") Crop Name:
+        //        input(type="text", name="cropName", id="cropName")
+        //
+        //        label(for="cropDescription") Crop Description:
+        //        input(type="text", name="cropDescription", id="cropDescription")
+        //
+        //        label(for="plantedDate") Planted Date:
+        //        input(type="date", name="plantedDate", id="plantedDate")
+        //
+        //        label(for="plantedAmount") Planted Amount:
+        //        input(type="number", name="plantedAmount", id="plantedAmount")
+        //
+        //        label(for="expectedHarvestDate") Expected Harvest Date:
+        //        input(type="date", name="expectedHarvestDate", id="expectedHarvestDate")
+        //
+        //    input(type="checkbox" name="destinationChoiceBtn" id="destinationChoiceBtn")
+        //    label(for="destinationChoiceBtn") Add Destination
+        //    br
+        //
+        //    // Destination Section
+        //    section#destinationSection(style="display: none;")
+        //        h3 Destination
+        //        label(for="destination") Destination:
+        //        select(name="destination", id="destination")
+        //            option(value="option1") Option 1
+        //            option(value="option2") Option 2
+        //            // Add more options as needed
+        //
+        //
+        //    input(type="checkbox" name="historyChoiceBtn" id="historyChoiceBtn")
+        //    label(for="historyChoiceBtn") Add History
+        //    br
+        //    // History Section
+        //    section#historySection(style="display: none;")
+        //        h3 History Section
+        //
+        //    //group name
+        //    section
+        //        h3 Group Name
+        //        label(for="groupName") Group Name:
+        //        input(type="text", name="groupName", id="groupName")
+        //
+        //    // Submit Button
+        //    button(type="submit") Submit
+        //
 
-            // Crop Section
-            section#currentCrop(style="display: none;")
-
-                h3 Current Crop
-                label(for="cropName") Crop Name:
-                input(type="text", name="cropName", id="cropName")
-
-                label(for="cropDescription") Crop Description:
-                input(type="text", name="cropDescription", id="cropDescription")
-
-                label(for="plantedDate") Planted Date:
-                input(type="date", name="plantedDate", id="plantedDate")
-
-                label(for="plantedAmount") Planted Amount:
-                input(type="number", name="plantedAmount", id="plantedAmount")
-
-                label(for="expectedHarvestDate") Expected Harvest Date:
-                input(type="date", name="expectedHarvestDate", id="expectedHarvestDate")
-
-            input(type="checkbox" name="destinationChoiceBtn" id="destinationChoiceBtn")
-            label(for="destinationChoiceBtn") Add Destination
-            br
-
-            // Destination Section
-            section#destinationSection(style="display: none;")
-                h3 Destination
-                label(for="destination") Destination:
-                select(name="destination", id="destination")
-                    option(value="option1") Option 1
-                    option(value="option2") Option 2
-                    // Add more options as needed
-
-
-            input(type="checkbox" name="historyChoiceBtn" id="historyChoiceBtn")
-            label(for="historyChoiceBtn") Add History
-            br
-            // History Section
-            section#historySection(style="display: none;")
-                h3 History Section
-
-            //group name
-            section
-                h3 Group Name
-                label(for="groupName") Group Name:
-                input(type="text", name="groupName", id="groupName")
-
-            // Submit Button
-            button(type="submit") Submit
-
-
-        p ---------------------- Sidebar ----------------------
-        ul#sidebar Locations
-            each group, groupName in groups || {}
-                +sidebarLocationFactory(group, groupName)
+        //p ---------------------- Sidebar ----------------------
+        //ul#sidebar Locations
+        //    each group, groupName in groups || {}
+        //        +sidebarLocationFactory(group, groupName)
 
 
         script.
@@ -136,12 +142,6 @@ html
             function expandGroup(groupName) {
                 fetch(`/expandGroup/${groupName}`).then(() => {
                     window.location.href = `/expandGroup/${groupName}`;
-                });
-            }
-
-            function groups() {
-                fetch('/groups').then(() => {
-                    window.location.href = '/groups';
                 });
             }
 
