--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,10 +1,9 @@
 
 link(rel='stylesheet', href='./CSS/navbar.css')
 
-header.navbar
-    nav.navbar__container
-        span.navbar__brand TopraTek
-        div.navbar__links
-            a.navbar__link(href="/") Map
-            a.navbar__link(href="/groups") Groups
-            a.navbar__link(href="/settings") Settings
+nav
+    span.nav_brand TopraTek
+    div.nav_links
+        a.nav_link(href="/") Map
+        a.nav_link(href="/groups") Groups
+        a.nav_link(href="/settings") Settings
