--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -1,14 +1,28 @@
 mixin sidebarLocationFactory(group, groupName)
     ul.sidebar-group
         li.sidebar-group-title= groupName
-            button(type="button", id=`${groupName}`, onclick=`expandGroup('${groupName}')`) EXP
+            button(type="button", id=`${groupName}`, onclick=`expandGroup('${groupName}')`).sidebar-action-button
+                img.icon(src="./icons/expand-group-icon.svg")
         each location in group || {}
             li.sidebar-location(locationId=`${location.id}`, title=`${location.locationTitle}`, groupName=`${groupName}`)
                 span.sidebar-location-title= location.locationTitle
-                button.sidebar-delete-button(type="button", hx-post="/removeLocation", hx-target="#sidebar", hx-trigger="click", hx-swap="outerHTML", hx-vars=`{"locationId": "${location.id}", "title": "${location.locationTitle}", "groupName": "${groupName}"`) DEL
+                .location-buttons
+                    button.sidebar-action-button(type="button")
+                        img.icon(src="./icons/goto-icon.png")
+                    button.sidebar-action-button(type="button")
+                        img.icon(src="./icons/expand-icon.svg")
+                    button.sidebar-action-button(type="button", hx-post="/removeLocation", hx-target="#sidebar", hx-trigger="click", hx-swap="outerHTML", hx-vars=`{"locationId": "${location.id}", "title": "${location.locationTitle}", "groupName": "${groupName}"`)
+                        img.icon(src="./icons/del-icon.png")
 
 link(rel='stylesheet', href='./CSS/sidebar.css')
 
 ul#sidebar
     each group, groupName in groups || {}
         +sidebarLocationFactory(group, groupName)
+
+script.
+    function expandGroup(groupName) {
+       fetch(`/expandGroup/${groupName}`).then(() => {
+           window.location.href = `/expandGroup/${groupName}`;
+       });
+    }
