--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -5,19 +5,21 @@
     --fourth-color: #9EC8B9;
     --text-color: white;
     /*    light and dark modes to be added  */
-    --border-radius: 5px
+    --border-radius: 5px;
+
+    --min-screen-width: 500px;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
 
 body {
     margin: 0;
+    padding: 0;
     font-family: 'Arial', sans-serif;
-    padding-top: var(--navbar-height);
-}
-
-.main-container {
-    margin-left: var(--sidebar-width);
-    padding: 1.25em;
-    height: calc(100vh - var(--navbar-height));
-    box-sizing: border-box;
+    min-width: var(--min-screen-width);
+    height: 100%;
+    overflow: hidden;
 }
