--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -8,6 +8,7 @@
     --border-radius: 5px;
 
     --min-screen-width: 500px;
+    --map-border-thickness: 2px;
 }
 
 * {
@@ -20,6 +21,19 @@ body {
     padding: 0;
     font-family: 'Arial', sans-serif;
     min-width: var(--min-screen-width);
-    height: 100%;
+    height: 100vh;
+
     overflow: hidden;
 }
+
+main {
+    display: flex;
+}
+
+
+
+
+
+
+
+
